Update default page

--- a/html/index.html
+++ b/html/index.html
@@ -6,10 +6,8 @@
     <title>Docker LAMP Stack for RaspberryPi</title>
 </head>
 <body>
-    <h1>Base document root</h1>
-    <p>Upload your files using your favorite FTP Software</p>
-
-    <hr>
+    <h1>Welcome home</h1>
+    <p>Please upload your files using your favorite FTP Software.</p>
 
     <h2>This Docker Stack include</h2>
     <ul>
